Configure bootRun with java 14 preview features